--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,1 +1,22 @@
+name: Docker - Terraform EC2
 
+on: 
+  push:
+    branches:
+      - main
+
+jobs:
+  terraform:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v3
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          
