--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -29,5 +29,8 @@ jobs:
       - name: Terraform preview
         run: terraform plan
 
+      - name: Apply the changes
+        run: terraform apply
+
         
           
