--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -30,7 +30,6 @@ jobs:
         run: terraform plan
 
       - name: Apply the changes
-        run: terraform apply
-
+        run: terraform apply -auto-approve
         
           
